2008-03-09  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Read/write multiple cubes. Always
	write in bohr. More error checking in write might be needed.

2008-03-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/mol.h, src/mol.cpp: GetEnergy(int) and GetEnergies 
	now use OBConformerData to hold the energies.

	* include/openbabel/forcefield.h, src/forcefield.cpp: GetConformers
	and GetCoordinates attatches OBConformerData to the molecule. Energies
	and Forces are set.

	* src/forcefields/forcefieldmmff94.*: minimize the number of calls to
	atoi(GetType, ...) in Setup functions. Use OBBitVec class to replace
	vector<int> where possible.

2008-03-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: The recent patch from Liu Zhiguo had a bug in
	OBMol::ConnectTheDots(). Inside a loop, NextBond was called without
	checking the return value directly. The return value was being checked
	outside the loop.
	
	while (valCount < bondCount[atom->GetIdx() - 1]) {
	  maxbond = atom->NextBond(l);
	  ...
	  if (!maxbond) // Added
	    break;      // Added
	  valCount++;
	}
	if (!maxbond)
	  break;

2008-03-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/parsmart.cpp: Add protection against double-free
	bugs. Assign pointers to NULL. Addresses bug reported from 
	Avogaro PR#1897745.

	* src/forcefields/forcefieldghemical.cpp: Fix problem with VDW
	gradients -- typo of "kb" instead of "ka."

	* src/forcefields/*.cpp: Remove many (but not all) compile
	warnings from GCC. 

	* src/kekulize.cpp, src/chains.cpp: Ditto.

	* src/ring.cpp: Before running FindSSSR(), delete old data. This
	improves potential race conditions in multi-threaded client code
	(e.g., Avogadro).

2008-03-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Added write function.

2008-03-04  Geoffrey Hutchison  <babel@geoffhutchison.net>
